--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "typescript": "^3.6.3"
+        "typescript": "^3.6.3",
+        "css-loader": "^3.2.0",
+        "html-webpack-plugin": "^3.2.0",
+        "node-sass": "^4.12.0",
+        "sass-loader": "^8.0.0",
+        "source-map-loader": "^0.2.4",
+        "style-loader": "^1.0.0",
+        "url-loader": "^2.1.0",
+        "webpack": "^4.39.3",
+        "webpack-cli": "^3.3.8",
+        "webpack-dev-server": "^3.8.0"
     }
 }
