--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
                         }
                     }
                 ],
+                "@babel/react",
                 "@babel/typescript"
             ],
             "plugins": [
