--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     },
     "author": "",
     "license": "ISC",
+    "dependencies": {
+        "react": "^16.9.0",
+        "react-dom": "^16.9.0"
+    },
     "devDependencies": {
         "typescript": "^3.6.3",
         "css-loader": "^3.2.0",
@@ -25,6 +29,9 @@
         "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
         "@babel/preset-env": "^7.5.5",
         "@babel/preset-typescript": "^7.3.3",
-        "babel-loader": "^8.0.6"
+        "@babel/preset-react": "^7.0.0",
+        "babel-loader": "^8.0.6",
+        "@types/react": "^16.9.2",
+        "@types/react-dom": "^16.9.0"
     }
 }
