--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "sass-loader": "^8.0.0",
         "source-map-loader": "^0.2.4",
         "style-loader": "^1.0.0",
+        "tslint": "^5.19.0",
+        "tslint-react": "^4.0.0",
         "url-loader": "^2.1.0",
         "webpack": "^4.39.3",
         "webpack-cli": "^3.3.8",
